--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,26 @@
-numpy>=1.21
-torch>=2.0
+# Core
+numpy>=1.21,<2.0
 scipy>=1.7
-matplotlib>=3.5
-yfinance>=0.2
 pandas>=1.3
+matplotlib>=3.5
+
+# Deep Learning
+torch>=2.0
+
+# Data
+yfinance>=0.2
+
+# Scientific
+scikit-learn>=1.0
+
+# CLI and Utils
+click>=8.0
+tqdm>=4.60
+
+# Testing
+pytest>=7.0
+pytest-cov>=4.0
+
+# Development
+black>=23.0
+isort>=5.10
