--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,29 @@
-# Core
-numpy>=1.21,<2.0
-scipy>=1.7
-pandas>=1.3
-matplotlib>=3.5
+# Core dependencies - pinned for reproducibility
+numpy==1.26.4
+scipy==1.12.0
+pandas==2.2.0
+matplotlib==3.8.2
 
 # Deep Learning
-torch>=2.0
+torch==2.2.0
 
 # Data
-yfinance>=0.2
+yfinance==0.2.36
 
 # Scientific
-scikit-learn>=1.0
+scikit-learn==1.4.0
 
 # CLI and Utils
-click>=8.0
-tqdm>=4.60
+click==8.1.7
+tqdm==4.66.1
+
+# Signatures (for path matching)
+signatory==1.2.6.1.9.0
 
 # Testing
-pytest>=7.0
-pytest-cov>=4.0
+pytest==8.0.0
+pytest-cov==4.1.0
 
-# Development
-black>=23.0
-isort>=5.10
+# Development (optional)
+black==24.1.1
+isort==5.13.2
