--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ scipy==1.12.0
 pandas==2.2.0
 matplotlib==3.8.2
 
-# Deep Learning
+# Deep Learning (install first for other packages that depend on it)
 torch==2.2.0
 
 # Data
@@ -16,9 +16,6 @@ scikit-learn==1.4.0
 # CLI and Utils
 click==8.1.7
 tqdm==4.66.1
-
-# Signatures (for path matching)
-signatory==1.2.6.1.9.0
 
 # Testing
 pytest==8.0.0
